Fixed popup form

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Happy secrets</title>
@@ -134,7 +134,7 @@
                             </h5>
                         </div>
                         <img src="img/happywoman.jpg" alt="BROOKE C. CARRINGTON" class="team-list__photo">
-                    </a>
+                    <!--</a>-->
                 </li>
                 <li class="team-list__item">
                     <!--<a href="#" class="team-list__link">-->
@@ -144,7 +144,7 @@
                             </h5>
                         </div>
                         <img src="img/check.jpg" alt="Otto W. Schreffler" class="team-list__photo">
-                    </a>
+                    <!--</a>-->
                 </li>
                 <li class="team-list__item">
                     <!--<a href="#" class="team-list__link">-->
@@ -154,7 +154,7 @@
                             </h5>
                         </div>
                         <img src="img/family.jpg" alt="ARTHUR M. HUFFMAN" class="team-list__photo">
-                    </a>
+                    <!--</a>-->
                 </li>
             </ul>
         </div>
@@ -353,23 +353,6 @@
                 </div>
                 <div class="slider__item">
                     <div class="slider-testimonials--left">
-                        <img src="img/testimonials-img.png" alt="Natalia" class="slider-testimonials__image">
-                    </div>
-                    <div class="slider-testimonials--right">
-                        <p class="slider-testimonials__text">
-                           Текст 2
-                        </p>
-                        <h3 class="slider-testimonials__title">
-                           Наталья
-                        </h3>
-                        <a href="https://www.instagram.com/" class="slider-testimonials__subtitle">
-                            <i class="fab fa-instagram"></i>
-                            Instagram - @
-                        </a>
-                    </div>
-                </div>
-                <div class="slider__item">
-                    <div class="slider-testimonials--left">
                         <img src="img/kristina.jpg" alt="Kristina" class="slider-testimonials__image">
                     </div>
                     <div class="slider-testimonials--right">
@@ -446,9 +429,9 @@
             Для заказа оставьте, пожалуйства, свои контактные данные.<br>
             Наш менеджер свяжется с Вами для уточнения всех деталей.
         </p>
-        <form action="post" class="form-popup">
+        <form action="POST" class="form-popup">
             <input type="text" name="name" placeholder="Ваше имя" class="form-popup__name" minlength="3" maxlength="25" required>
-            <input type="tel" name="phone" placeholder="Номер телефона" class="form-popup__phone" minlength="10" maxlength="15" required>
+            <input type="tel" name="phone" placeholder="Номер телефона" class="form-popup__name" minlength="10" maxlength="15" required>
             <button type="submit" class="form-popup__button">
                 Отправить данные
             </button>
