--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="http://allfont.ru/allfont.css?fonts=raleway-extrabold" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css"/>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
 <header class="header" id="header">
@@ -451,11 +451,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-<script src="js/slider.js"></script>
-<script src="js/accordion.js"></script>
-<script src="js/scroll.js"></script>
-<script src="js/popup.js"></script>
-<script src="js/gallery.js"></script>
-<script src="js/menu.js"></script>
+<script src="dist/all.js"></script>
 </body>
 </html>
