--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy secrets</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -451,6 +451,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+<!--<script src="js/slider.js"></script>-->
+<!--<script src="js/accordion.js"></script>-->
+<!--<script src="js/scroll.js"></script>-->
+<!--<script src="js/popup.js"></script>-->
+<!--<script src="js/gallery.js"></script>-->
+<!--<script src="js/menu.js"></script>-->
 <script src="dist/all.js"></script>
 </body>
 </html>
