--- a/index.html
+++ b/index.html
@@ -344,23 +344,6 @@
                         </div>
                         <div class="slider__item">
                             <div class="slider-testimonials--left">
-                                <img src="img/marina.jpg" alt="Marina" class="slider-testimonials__image">
-                            </div>
-                            <div class="slider-testimonials--right">
-                                <p class="slider-testimonials__text">
-                                    Текст 2
-                                </p>
-                                <h3 class="slider-testimonials__title">
-                                    Марина Ткаченко
-                                </h3>
-                                <a href="https://www.instagram.com/maritkachenkoart/" class="slider-testimonials__subtitle">
-                                    <i class="fab fa-instagram"></i>
-                                    Instagram - @maritkachenkoart
-                                </a>
-                            </div>
-                        </div>
-                        <div class="slider__item">
-                            <div class="slider-testimonials--left">
                                 <img src="img/kristina.jpg" alt="Kristina" class="slider-testimonials__image">
                             </div>
                             <div class="slider-testimonials--right">
@@ -373,6 +356,41 @@
                                 <a href="https://www.instagram.com/kristismirnovawed/" class="slider-testimonials__subtitle">
                                     <i class="fab fa-instagram"></i>
                                     Instagram - @kristismirnova_
+                                </a>
+                            </div>
+                        </div>
+                        <div class="slider__item">
+                            <div class="slider-testimonials--left">
+                                <img src="img/natali.jpg" alt="Natali" class="slider-testimonials__image">
+                            </div>
+                            <div class="slider-testimonials--right">
+                                <p class="slider-testimonials__text">
+                                    Вспомните моменты из детства, когда Вам было спокойно и тепло, легко и весело!
+                                    Наша миссия - подарить Вам и Вашей семье как можно больше счастливых моментов.
+                                    Ведь жизнь должна наполняться новыми яркими воспоминаниями, и только мы сами в силах нанизывать их,
+                                    как драгоценный жемчуг, на нить наших дней.<br>
+                                    Мы подскажем как можно разнообразить этот увлекательный путь под названием "родители и дети".
+                                    Это великое счастье жить в гармоничной Семье! Присоединяйтесь!
+                                </p>
+                                <h3 class="slider-testimonials__title">
+                                     Наталия Деличебан
+                                </h3>
+                            </div>
+                        </div>
+                        <div class="slider__item">
+                            <div class="slider-testimonials--left">
+                                <img src="img/marina.jpg" alt="Marina" class="slider-testimonials__image">
+                            </div>
+                            <div class="slider-testimonials--right">
+                                <p class="slider-testimonials__text">
+                                    Текст 2
+                                </p>
+                                <h3 class="slider-testimonials__title">
+                                    Марина Ткаченко
+                                </h3>
+                                <a href="https://www.instagram.com/maritkachenkoart/" class="slider-testimonials__subtitle">
+                                    <i class="fab fa-instagram"></i>
+                                    Instagram - @maritkachenkoart
                                 </a>
                             </div>
                         </div>
