--- a/index.html
+++ b/index.html
@@ -348,7 +348,12 @@
                             </div>
                             <div class="slider-testimonials--right">
                                 <p class="slider-testimonials__text">
-                                    Текст 1
+                                    Дети - они настоящие, искренние и добрые. Они дарят родителям энергию,
+                                    любовь и тепло. Ну а родтели могут подарить самое главное - свое внимание.
+                                    Время, проведенное с детьми, бесценно.<br>
+                                    Этот проект направлен на сближение родетелей с детками. Он интересный, необычный и теплый.
+                                    Нестандартный подход к выполнению заданий, оригинальные идеи, легкий юмор вдохновит родителей
+                                    и позволит им хорошо провести время с детками!
                                 </p>
                                 <h3 class="slider-testimonials__title">
                                     Кристина Смирнова
@@ -375,23 +380,6 @@
                                 <h3 class="slider-testimonials__title">
                                      Наталия Деличебан
                                 </h3>
-                            </div>
-                        </div>
-                        <div class="slider__item">
-                            <div class="slider-testimonials--left">
-                                <img src="img/marina.jpg" alt="Marina" class="slider-testimonials__image">
-                            </div>
-                            <div class="slider-testimonials--right">
-                                <p class="slider-testimonials__text">
-                                    Текст 2
-                                </p>
-                                <h3 class="slider-testimonials__title">
-                                    Марина Ткаченко
-                                </h3>
-                                <a href="https://www.instagram.com/maritkachenkoart/" class="slider-testimonials__subtitle">
-                                    <i class="fab fa-instagram"></i>
-                                    Instagram - @maritkachenkoart
-                                </a>
                             </div>
                         </div>
                     </div>
